Fix RTD config: change rust tool version to latest.

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,7 +4,7 @@ build:
   os: ubuntu-lts-latest
   tools:
     python: "3.11"
-    rust: "stable"
+    rust: "latest"
 
 sphinx:
   configuration: docs/source/conf.py
