fix: rename methods, fix stubs, and correct pre-commits

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -103,3 +103,18 @@ jobs:
           merge-multiple: true
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+
+  publish-to-crates-io:
+    name: Publish to crates.io
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+      - name: Publish
+        run: |
+          cd hgvs-weaver
+          cargo publish --token ${{ secrets.CRATES_IO_TOKEN }}
