--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ name = "hgvs-weaver"
 version = "0.1.1"
 description = "High-performance HGVS parser for Python (Rust powered)"
 dependencies = [
+    "defusedxml>=0.7.1",
     "maturin>=1.11.5",
 ]
 requires-python = ">=3.10"
