Refactor: sequence abstraction and fix synonymous variant regressions
- Implement `Sequence` trait for iterator-based sequence access in Rust.
- Refactor `AltSeqBuilder` to use lazy slicing and reduce eager string allocations.
- Fix regression where synonymous variants (`c.360=`) were incorrectly translated as frameshifts.
- Prioritize stop codons over frameshifts in protein translation if stop occurs at variant site.
- Fix SPDI identity handling (`REF:REF` representation).
- Integrate analysis and contingency reporting into `weaver-analyze`.
- Add regression test suite `tests/test_regressions.rs`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dev = [
     "mypy",
     "myst-parser",
     "pytest>=8.4.1",
+    "pytest-cov>=7.0.0",
     "ruff",
     "sphinx",
     "sphinx-rtd-theme",
