--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,10 @@ build-backend = "maturin"
 
 [project]
 name = "hgvs-weaver"
-version = "0.1.1"
+version = "0.2.0"
 description = "High-performance HGVS parser for Python (Rust powered)"
 dependencies = [
+    "defusedxml>=0.7.1",
     "maturin>=1.11.5",
 ]
 requires-python = ">=3.10"
@@ -31,6 +32,7 @@ dev = [
     "mypy",
     "myst-parser",
     "pytest>=8.4.1",
+    "pytest-cov>=7.0.0",
     "ruff",
     "sphinx",
     "sphinx-rtd-theme",
