feat: Protein variant projection improvements and v0.3.0 release
This commit consolidates a series of structural and correctness improvements to the
protein variant projection engine and establishes the v0.3.0 baseline.

Core Library (hgvs-weaver):
- Refactored `EquivalenceLevel` enum for clarity (Identity vs. Analogous).
- Implemented support for Selenoproteins, allowing correct variant projection in
  transcripts with internal stop codons (e.g., GPX1).
- Added a \"God-Mode\" threshold for CDS end coordinates to filter 3' UTR noise:
  Variants after the primary stop codon are now correctly projected as p.(=).
- Corrected distal frameshift termination offsets to follow HGVS spec (+1 relative
  to the synthesized stop codon).
- Refactored coordinate mapping to be anchor-aware, resolving off-by-one errors
  at transcript boundaries.
- Improved repeat region handling by fetching full reference sequences for alignment.
- Enhanced out-of-bounds error reporting with explicit coordinate validation.

Performance & Visualization:
- Overhauled README.md performance dashboard with a new stacked bar chart format.
- Added success breakdown: Identity Match vs. Analogous (biologically equivalent) Match.
- Recalibrated historical benchmarking data (back to 0.1.0) to include the new
  granular success metrics for both Weaver and Ref-HGVS.
- Achieved a validated 98.77% total success rate on 100k ClinVar variants.

Tooling & Release:
- Bumped version to 0.3.0 across pyproject.toml and Cargo.toml.
- Updated analysis and visualization scripts for automated README generation.
- Archived full validation results for the 0.3.0 release in the benchmark directory.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,18 @@
 [package]
 name = "hgvs-weaver-py"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 
 [lib]
 name = "_weaver" # This will be the name of the python module
 crate-type = ["cdylib", "rlib"]
 
+[features]
+extension-module = ["pyo3/extension-module"]
+default = ["extension-module"]
+
 [dependencies]
-pyo3 = { version = "0.27.1", features = ["extension-module", "generate-import-lib"] }
+pyo3 = { version = "0.27.1", features = ["generate-import-lib"] }
 pyo3-stub-gen = "0.17.1"
 hgvs-weaver = { path = "./hgvs-weaver" }
 serde_json = "1.0"
